force-app/main/default/objects/ccrz__E_PriceListItem__c/ccrz__E_PriceListItem__c.object-meta.xml
<CustomObject>
    <description>Represents an entry in the Pricelist.  Each pricelist object is made up of 1 or more pricelist item objects.  This item objects contain a reference to the product and hold a price value (0, in the case where only entitlements are being used).  The products referenced within these items will be displayed in search and product listings on the external site.</description>
    <label>CC Price List Item</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>PriceListItemAutoNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Price List Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>