force-app/main/default/objects/ccrz__E_PriceListItem__c/fields/B2B_Externally_Priced_Item__c.field-meta.xml
<CustomField>
    <fullName>B2B_Externally_Priced_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pricing for the PLI record would need to be provided by calling API to Prelude to get pricing.</description>
    <inlineHelpText>Pricing for the PLI record would need to be provided by calling API to Prelude to get pricing.</inlineHelpText>
    <label>Externally Priced Item</label>
    <type>Checkbox</type>
</CustomField>