force-app/main/default/objects/ccrz__E_PriceListItem__c/fields/B2B_Promo_Basis_Price__c.field-meta.xml
<CustomField>
    <fullName>B2B_Promo_Basis_Price__c</fullName>
    <description>For Promotional priced items only to store the &quot;before&quot; price for the Promotion.  This will be used for comparing to the Promo Price for Savings to customer.</description>
    <inlineHelpText>For Promotional priced items only to store the &quot;before&quot; price for the Promotion.  This will be used for comparing to the Promo Price for Savings to customer.</inlineHelpText>
    <label>Promo Basis Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>