force-app/main/default/objects/ccrz__E_PriceListItem__c/fields/B2B_Promo_Priced_Item__c.field-meta.xml
<CustomField>
    <fullName>B2B_Promo_Priced_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this is a Promotional Priced Item for a limited time.  Used to show End Date of Promo.</description>
    <inlineHelpText>Checked if this is a Promotional Priced Item for a limited time.  Used to show End Date of Promo.</inlineHelpText>
    <label>Promo Priced Item</label>
    <type>Checkbox</type>
</CustomField>