force-app/main/default/objects/ccrz__E_PriceListItem__c/fields/B2B_Show_Promo_End_Date__c.field-meta.xml
<CustomField>
    <fullName>B2B_Show_Promo_End_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag for CC pages to show Promo end date if the item is flagged as a Promotion.  For longer promotions, only show towards the end of the promotion.</description>
    <inlineHelpText>Flag for CC pages to show Promo end date if the item is flagged as a Promotion.  For longer promotions, only show towards the end of the promotion.</inlineHelpText>
    <label>Show Promo End Date</label>
    <type>Checkbox</type>
</CustomField>