force-app/main/default/objects/ccrz__E_PriceListItem__c/fields/B2B_Suggested_Retail__c.field-meta.xml
<CustomField>
    <fullName>B2B_Suggested_Retail__c</fullName>
    <description>Suggested Retail field to be displayed to customer if flag set on Account.</description>
    <inlineHelpText>Suggested Retail Field</inlineHelpText>
    <label>Suggested Retail</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>