force-app/main/default/objects/ccrz__E_PriceListItem__c/fields/ccrz__ItemType__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ItemType__c</fullName>
    <description>The type of this price list item. Used for filtering and performance</description>
    <externalId>true</externalId>
    <label>Item Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>