force-app/main/default/objects/ccrz__E_PriceListItem__c/fields/ccrz__MinQty__c.field-meta.xml
<CustomField>
    <fullName>ccrz__MinQty__c</fullName>
    <description>Minimum Quantity - This field is not used within B2B Commerce but may be used in the future.</description>
    <label>Min Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>