force-app/main/default/objects/ccrz__E_PriceListItem__c/fields/ccrz__Price__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Price__c</fullName>
    <description>Holds the price for the item. If pricing is not being utilized, fill in a default value, such as 0.</description>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>