force-app/main/default/objects/ccrz__E_PriceListItem__c/fields/ccrz__Pricelist__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Pricelist__c</fullName>
    <description>Required - The reference to the pricelist</description>
    <label>Pricelist</label>
    <referenceTo>ccrz__E_PriceList__c</referenceTo>
    <relationshipLabel>Price List Items</relationshipLabel>
    <relationshipName>E_PriceListItems1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>