force-app/main/default/objects/ccrz__E_PriceListItem__c/fields/ccrz__PricelistItemId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__PricelistItemId__c</fullName>
    <description>External reference id for this entry</description>
    <externalId>true</externalId>
    <label>Pricelist Item Id</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>