force-app/main/default/objects/ccrz__E_PriceListItem__c/fields/ccrz__Product__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Required - The reference to the product entry</description>
    <label>Product</label>
    <referenceTo>ccrz__E_Product__c</referenceTo>
    <relationshipLabel>Price List Items</relationshipLabel>
    <relationshipName>E_PriceListItems</relationshipName>
    <type>Lookup</type>
</CustomField>