force-app/main/default/objects/ccrz__E_PriceListItem__c/fields/ccrz__StartDate__c.field-meta.xml
<CustomField>
    <fullName>ccrz__StartDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>The start date for which this item record is active. This is the first date the item will be active</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>