force-app/main/default/objects/ccrz__E_PriceListItem__c/fields/ccrz__SubProdTerm__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SubProdTerm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The subscription term this price is associated with.</description>
    <inlineHelpText>Enter the subscription term this price is associated with.</inlineHelpText>
    <label>SubProdTerm</label>
    <referenceTo>ccrz__E_SubProdTerm__c</referenceTo>
    <relationshipLabel>CC Price List Items</relationshipLabel>
    <relationshipName>E_PriceListItems</relationshipName>
    <type>Lookup</type>
</CustomField>