force-app/main/default/objects/ccrz__E_PriceListItem__c/fields/ccrz__UnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>ccrz__UnitOfMeasure__c</fullName>
    <description>Unit of Measure for this price.  This field in combination with the product can give UOM specific pricing.  This field is optional, and allows for general pricing for a product independent of UOM.</description>
    <inlineHelpText>Unit of Measure for this price.  This field in combination with the product can give UOM specific pricing.  This field is optional, and allows for general pricing for a product independent of UOM.</inlineHelpText>
    <label>Unit Of Measure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>